<resources>
    <string name="app_name">FindASet</string>
    <string name="lbl_login">Login</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="btn_login">login</string>
    <string name="lbl_register">Register</string>
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_confirm_password">password</string>
    <string name="btn_register">register</string>
    <string name="btn_play_as_guest">play as guest</string>
    <string name="back">back</string>
    <string name="main_refresh">REFRESH</string>
    <string name="find_all_mode">Find ALL Mode</string>
    <string name="find_ten_mode">Find TEN Mode</string>
    <string name="tutorial_mode">Learning Mode</string>
    <string name="leader_board">Leader Board</string>
    <string name="hint_password">Password</string>
    <string name="login_forget">Forget!</string>
    <string name="login_enter">Enter</string>
    <string name="login_don_t_joined_yet">Don\'t Joined Yet !</string>
    <string name="helloNote">Hello Username! </string>
    <string name="login_join">Join</string>
    <string name="board_leader_board">Leader Board</string>
    <string name="board_find_all">Find ALL</string>
    <string name="board_find_ten">Find TEN</string>
    <string name="hint_username">User Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="feature_size">size</string>
    <string name="feature_color">color</string>
    <string name="feature_shading">shading</string>
    <string name="feature_type">type</string>
    <string name="learn_pref_name">LearnAppPreferences</string>
    <string name="learn_lbl_login_underlined"><u>Login</u></string>
    <string name="learn_lbl_logout"><u>Log out</u></string>
    <string name="learn_samplelong_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.dummy text of the printing and typesetting </string>
    <string name="learn_short_text">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit</string>
    <string name="learn_hint_password">password</string>
    <string name="learn_txt_email">username</string>
    <string name="learn_hint_username">username</string>
    <string name="learn_register_note">By Pressing \'Join\' you agree to our</string>
    <string name="learn_txt_terms_condition"><u>Terms &amp; Condition</u></string>
    <string name="learn_lblget_started">Get Started</string>
    <string name="learn_lbl_home">Home</string>
    <string name="learn_lbl_search">Search</string>
    <string name="learn_lbl_cource">My Cource</string>
    <string name="learn_lbl_more">More</string>
    <string name="learn_lbl_top_instructors">Top Instructors</string>
    <string name="learn_lbl_recommended">Recommended</string>
    <string name="learn_hint_search">Search...</string>
    <string name="learn_lbl_started">Start</string>
    <string name="learn_lbl_favourite_courses">Favourite Courses</string>
    <string name="learn_lbl_achievements">Achievements</string>
    <string name="learn_lbl_learboard">Leaderboard</string>
    <string name="learn_lbl_badges">Badges</string>
    <string name="learn_lbl_locked_badge">Locked Badge</string>
    <string name="learn_lbl_unlock_to_see_details">Unlock to see details</string>
    <string name="title_activity_learn_instructor_detail">LearnInstructorDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="learn_lbl_chats">Chats</string>
    <string name="learn_lbl_all">All</string>
    <string name="learn_lbl_instructors">Instructors</string>
    <string name="learn_lbl_friends">Friends</string>
    <string name="learn_lbl_bots">Bots</string>
    <string name="learn_lbl_start_a_new_chat">START A NEW CHAT</string>
    <string name="learn_lbl_5_0">5.0</string>
    <string name="learn_lbl_2_8k_students">2.8K Students</string>
    <string name="learn_lbl_36_lectures">36 Lectures</string>
    <string name="learn_lbl_30_80">$30.80</string>
    <string name="learn_lbl_hannah_tran">Hannah Tran</string>
    <string name="learn_lbl_project_management">Project Management</string>
    <string name="learn_lbl_1_6k">1.6K</string>
    <string name="learn_lbl_students">Students</string>
    <string name="learn_lbl_rating">Rating</string>
    <string name="learn_lbl_37">37</string>
    <string name="learn_lbl_lectures">Lectures</string>
    <string name="learn_lbl_swipe_up_to_show_course_contents">Swipe up to show course contents</string>
    <string name="learn_lbl_marc_elliot">Marc Elliot</string>
    <string name="learn_lbl_active">Active</string>
    <string name="learn_lbl_ask_me_something">Ask me Something</string>
    <string name="learn_lbl_congrats">Congrats!</string>
    <string name="learn_lbl_you_unlocked_a_new_badge">You unlocked a new badge!</string>
    <string name="learn_lbl_awesome">Awesome!</string>
    <string name="learn_lbl_aa">Aa</string>
    <string name="learn_lbl_introduction">Introduction</string>
    <string name="learn_lbl_favourites">Favourites</string>
    <string name="learn_lbl_student">Student</string>
    <string name="learn_lbl_add_friend">Add Friend</string>
    <string name="_7">7</string>
    <string name="learn_lbl_courses">Courses</string>
    <string name="learn_lbl_193_79">193,79</string>
    <string name="learn_lbl_points">Points</string>
    <string name="learn_lbl_11">11</string>
    <string name="learn_lbl_ranks">Ranks</string>
    <string name="learn_lbl_follow">Follow</string>
    <string name="learn_lbl_ratings">Ratings</string>
    <string name="learn_lbl_password">password</string>
    <string name="learn_lbl_forget">Forget!</string>
    <string name="learn_lbl_enter">Enter</string>
    <string name="learn_lbl_don_t_joined_yet">Don\'t Joined Yet !</string>
    <string name="learn_lbl_join">Join</string>
    <string name="learn_lbl_my_friends">My Friends</string>
    <string name="learn_lbl_accepted">Accepted</string>
    <string name="learn_lbl_pending">Pending</string>
    <string name="learn_lbl_welcome">Welcome</string>
</resources>