<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_grey"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/spacing_standard_new"
        android:layout_marginTop="@dimen/spacing_standard_new"
        android:contentDescription="@string/back"
        android:onClick="onClick_Back"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsernameLogin"
            style="@style/EditTextStyleRound"
            android:layout_marginTop="@dimen/spacing_large"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hint_username"
            android:maxLength="12"
            android:textColorHint="@color/metal_grey"
            android:textStyle="bold" />

        <RelativeLayout
            style="@style/EditTextStyleRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:background="@drawable/shadow_edittext"
            android:paddingStart="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_standard_new"
            android:paddingEnd="@dimen/spacing_standard"
            android:paddingBottom="@dimen/spacing_standard_new">

            <EditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxEms="7"
                android:maxLength="12"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/metal_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login_forget"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />


        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnter"
            style="@style/ModeButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:onClick="onBtnEnter_Clicked"
            android:paddingStart="@dimen/spacing_xlarge"
            android:paddingEnd="@dimen/spacing_xlarge"
            android:text="@string/login_enter"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvHelloNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_don_t_joined_yet"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_standard_new"
            android:clickable="false"
            android:fontFamily="@font/poppins_medium"
            android:onClick="onClick_Join"
            android:padding="@dimen/spacing_control"
            android:text="@string/login_join"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>